--- a/src/components/Reports/WbsTable/WbsTable.css
+++ b/src/components/Reports/WbsTable/WbsTable.css
@@ -47,8 +47,7 @@ iframe {
 .wbs-table-row {
   display: grid;
   grid-auto-flow: column;
-/*   grid-template-columns: 10% 25% 15% 50%; */
-  grid-template-columns: 1fr 2fr 1fr 3fr;
+  grid-template-columns: 10% 25% 15% 50%;
   column-gap: 4px;
   min-height: 42px;
   align-items: center;
